style: update floating badges layout and text to avoid CTA overlap

--- a/index.css
+++ b/index.css
@@ -795,8 +795,8 @@ img {
   animation-delay: 0s;
 }
 
-.badge-bottom-left {
-  bottom: 10%;
+.badge-top-left {
+  top: 10%;
   left: -5%;
   animation-delay: 3s;
 }
@@ -952,8 +952,8 @@ img {
     right: 10px;
     animation-delay: 0s;
   }
-  .badge-bottom-left {
-    bottom: 10px;
+  .badge-top-left {
+    top: 10px;
     left: 10px;
     animation-delay: 2.5s;
   }
